Delete and commands modified