@@ -2,13 +2,12 @@ package pl.edu.pg.eti.cs.lab1.configuration;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
-import pl.edu.pg.eti.cs.lab1.carrier.entity.Carrier;
 import pl.edu.pg.eti.cs.lab1.carrier.service.CarrierService;
 import pl.edu.pg.eti.cs.lab1.plane.entity.Plane;
 import pl.edu.pg.eti.cs.lab1.plane.service.PlaneService;
-
 import javax.annotation.PostConstruct;
-import java.util.List;
+import java.util.ArrayList;
+import java.util.Arrays;
 
 @Component
 public class InitializedData {
@@ -23,70 +22,29 @@ public class InitializedData {
 
     @PostConstruct
     private synchronized void init() {
-        Plane boeing737 = Plane.builder()
-                .id(0)
-                .manufacturer("Boeing")
-                .model("737")
-                .maxWeightPayload(10)
-                .maxPeoplePayload(150)
-                .build();
-        Plane boeing747 = Plane.builder()
-                .id(1)
-                .manufacturer("Boeing")
-                .model("747")
-                .maxWeightPayload(15)
-                .maxPeoplePayload(200)
-                .build();
-        Plane boeing787 = Plane.builder()
-                .id(2)
-                .manufacturer("Boeing")
-                .model("737")
-                .maxWeightPayload(10)
-                .maxPeoplePayload(150)
-                .build();
-        Plane airbusA300 = Plane.builder()
-                .id(3)
-                .manufacturer("Airbus")
-                .model("A300")
-                .maxWeightPayload(8)
-                .maxPeoplePayload(120)
-                .build();
-        Plane airbusA310 = Plane.builder()
-                .id(4)
-                .manufacturer("Airbus")
-                .model("A310")
-                .maxWeightPayload(15)
-                .maxPeoplePayload(280)
-                .build();
+        planeService.create("Boeing", "737", 10, 150);
+        planeService.create("Boeing", "747", 15, 200);
+        planeService.create("Boeing", "737", 10, 150);
+        planeService.create("Airbus", "A300", 8, 120);
+        planeService.create("Boeing", "737", 15, 280);
 
-        planeService.create(boeing737);
-        planeService.create(boeing747);
-        planeService.create(boeing787);
-        planeService.create(airbusA300);
-        planeService.create(airbusA310);
-
-        Carrier ryanair = Carrier.builder()
-                .name("ryanair")
-                .nationality("Ireland")
-                .flightDestinations(List.of("Poland", "England"))
-                .planes(List.of(boeing737, boeing747))
-                .build();
-        Carrier lufthansa = Carrier.builder()
-                .name("lufthansa")
-                .nationality("Germany")
-                .flightDestinations(List.of("Paris", "London"))
-                .planes(List.of(boeing787, airbusA300, airbusA310))
-                .build();
-        Carrier lot = Carrier.builder()
-                .name("lot")
-                .nationality("Poland")
-                .flightDestinations(List.of("Poland", "Spain"))
-                .planes(List.of())
-                .build();
-
-        carrierService.create(ryanair);
-        carrierService.create(lufthansa);
-        carrierService.create(lot);
-
+        carrierService.create(
+                "ryanair",
+                "Ireland",
+                new ArrayList<String>(Arrays.asList("Poland", "England")),
+                new ArrayList<Plane>(Arrays.asList(planeService.findAll().get(0), planeService.findAll().get(1)))
+        );
+        carrierService.create(
+                "lufthansa",
+                "Germany",
+                new ArrayList<String>(Arrays.asList("Paris", "London")),
+                new ArrayList<Plane>(Arrays.asList(planeService.findAll().get(2), planeService.findAll().get(3), planeService.findAll().get(4)))
+        );
+        carrierService.create(
+                "lot",
+                "Poland",
+                new ArrayList<String>(Arrays.asList("Poland", "Spain")),
+                new ArrayList<Plane>()
+        );
     }
 }
